# aipysdk

./: .gitignore  README.md  mypy.ini  pyproject.toml
examples/: async.py  sync.py
examples/vercel-sdk-integration/: bun.lockb  next.config.mjs  package.json  requirements.txt
examples/vercel-sdk-integration/api/: index.py
examples/vercel-sdk-integration/src/app/: page.tsx
src/aipysdk/: __init__.py
